# beepbox

./: .gitignore  CMakeLists.txt  Makefile
apps/: CMakeLists.txt
cmake/__arch/: FindBuildDirectory.cmake  FindError.cmake  FindOS.cmake
cmake/__deps/: EnablePolicies.cmake  GetDependencies.cmake
include/: CliParser.hxx  LoudnessStats.h  Mixer.h  configure.h  configure.h.in
include/StringUtils/: StringUtils.hxx
src/: BeepBoxMain.cpp  LoudnessStats.cpp  Mixer.cpp  VRand.cpp
